--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-DB_HOST=tramway.proxy.rlwy.net
+DB_HOST=switchyard.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=rGfyzshVYDXoxtAISSWzeLpaRvkDVzHp
+DB_PASSWORD=fXhfVvjBwQjfmpIBgreKhBNiEBVkgJyk
 DB_NAME=railway
+DB_PORT=27207
 PORT=5000
+# mysql://root:fXhfVvjBwQjfmpIBgreKhBNiEBVkgJyk@switchyard.proxy.rlwy.net:27207/railway
